--- a/.clippy.toml
+++ b/.clippy.toml
@@ -10,3 +10,4 @@ disallowed-methods = [
     { path = "futures::channel::mpsc::unbounded", reason = "use a bounded channel instead" },
     { path = "futures_channel::mpsc::unbounded", reason = "use a bounded channel instead" },
 ]
+//hard work here
